[package]
name = "cryptopals"
version = "0.1.0"
edition = "2018"

[dependencies]
aes = "0.7.5"
anyhow = "1.0.51"
base64 = "0.13.0"
block-modes = "0.8.1"
block-padding = "0.2.1"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.4"

[lib]
path = "lib.rs"

[[bin]]
name = "p01"
path = "p01.rs"

[[bin]]
name = "p02"
path = "p02.rs"

[[bin]]
name = "p03"
path = "p03.rs"

[[bin]]
name = "p04"
path = "p04.rs"

[[bin]]
name = "p05"
path = "p05.rs"

[[bin]]
name = "p06"
path = "p06.rs"

[[bin]]
name = "p07"
path = "p07.rs"

[[bin]]
name = "p08"
path = "p08.rs"

[[bin]]
name = "p09"
path = "p09.rs"

[[bin]]
name = "p10"
path = "p10.rs"

[[bin]]
name = "p11"
path = "p11.rs"

[[bin]]
name = "p12"
path = "p12.rs"
